change text to footer in work card

--- a/index.html
+++ b/index.html
@@ -252,52 +252,56 @@
                     <!-- work item -->
                     <div class="col-md-6 col-lg-4 mix web app graphic">
                         <div class="item">
-                            <h3>NN to predict stock prices</h3>
                             <a href="https://github.com/derrix060/PredictionStocks" class="work-popup">
                                 <img src="assets/img/works/artificial-intelligence.jpg" alt="Artificial Brain">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                            <h3>NN to predict stock prices</h3>
+                            <p class="text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
 
                     <!-- work item -->
                     <div class="col-md-6 col-lg-4 mix web app graphic">
                         <div class="item">
-                            <h3>OneDrive client for linux</h3>
                             <a href="https://github.com/derrix060/onedriveClient" class="work-popup">
                                 <img src="assets/img/works/cloud.jpg" alt="Cloud">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                            <h3>OneDrive client for linux</h3>
+                            <p class="text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
 
                     <!-- work item -->
                     <div class="col-md-6 col-lg-4 mix web app graphic">
                         <div class="item">
-                            <h3>Study to code competitions</h3>
                             <a href="https://github.com/derrix060/CodeStudy" class="work-popup">
                                 <img src="assets/img/works/code-study.jpg" alt="C++ code">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                            <h3>Study to code competitions</h3>
+                            <p class="text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
 
                     <!-- work item -->
                     <div class="col-md-6 col-lg-4 mix web app graphic">
                         <div class="item">
-                            <h3>Workshop attendance list control</h3>
                             <a href="https://github.com/derrix060/ChamadaEventosFatec" class="work-popup">
                                 <img src="assets/img/works/workshop.jpg" alt="Workshop">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                            <h3>Workshop attendance list control</h3>
+                            <p class="text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
 
@@ -305,35 +309,38 @@
                     <!-- work item -->
                     <div class="col-md-6 col-lg-4 mix web app graphic">
                         <div class="item">
-                            <h3>Solutions to google code jam</h3>
                             <a href="https://github.com/derrix060/GoogleCodeJam" class="work-popup">
                                 <img src="assets/img/works/google.jpg" alt="Cloud">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                            <h3>Solutions to google code jam</h3>
+                            <p class="text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
 
-                    <!-- work item -->
+
+                    <!-- Android app -->
                     <div class="col-md-6 col-lg-4 mix web app graphic">
                         <div class="item">
-                            <h3>Android app to blind people</h3>
                             <a href="https://github.com/CaueP/Hackaton_Fatec_Ipiranga_2016" class="work-popup">
                                 <img src="assets/img/works/android.jpg" alt="Android icon">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                            <h3>Android app to blind people</h3>
+                            <p class="text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         </div>
                     </div>
+
+                    
                 </div>
             </div>
-
-        </div>
+    
     </section>
     <!-- Work area ends -->
-
 
     <!-- Testimonial area starts -->
     <section id="testimonial" class="testimonial-area img-bg section">
