--- a/index.html
+++ b/index.html
@@ -236,21 +236,22 @@
 
             <div class="row">
 
-                <!-- Works filter ->
+                <!-- Works filter -->
                 <ul class="work filters">
                     <li class="filter" data-filter="all">All</li>
-                    <li class="filter" data-filter=".web">Web</li>
-                    <li class="filter" data-filter=".app">App</li>
-                    <li class="filter" data-filter=".graphic">Graphic</li>
+                    <li class="filter" data-filter=".java">Java</li>
+                    <li class="filter" data-filter=".cpp">C++</li>
+                    <li class="filter" data-filter=".python">Python</li>
                 </ul>
-                <!-- / Works filter -->
+                <!-- Works filter -->
+
             </div>
 
             <div class="portfolio">
                 <div class="row fix work-items">
 
                     <!-- work item -->
-                    <div class="col-md-6 col-lg-4 mix web app graphic">
+                    <div class="col-md-6 col-lg-4 mix java">
                         <div class="item">
                             <a href="https://github.com/derrix060/PredictionStocks" class="work-popup">
                                 <img src="assets/img/works/artificial-intelligence.jpg" alt="Artificial Brain">
@@ -264,7 +265,7 @@
                     </div>
 
                     <!-- work item -->
-                    <div class="col-md-6 col-lg-4 mix web app graphic">
+                    <div class="col-md-6 col-lg-4 mix python">
                         <div class="item">
                             <a href="https://github.com/derrix060/onedriveClient" class="work-popup">
                                 <img src="assets/img/works/cloud.jpg" alt="Cloud">
@@ -278,7 +279,7 @@
                     </div>
 
                     <!-- work item -->
-                    <div class="col-md-6 col-lg-4 mix web app graphic">
+                    <div class="col-md-6 col-lg-4 mix cpp java python">
                         <div class="item">
                             <a href="https://github.com/derrix060/CodeStudy" class="work-popup">
                                 <img src="assets/img/works/code-study.jpg" alt="C++ code">
@@ -292,7 +293,7 @@
                     </div>
 
                     <!-- work item -->
-                    <div class="col-md-6 col-lg-4 mix web app graphic">
+                    <div class="col-md-6 col-lg-4 mix cpp">
                         <div class="item">
                             <a href="https://github.com/derrix060/ChamadaEventosFatec" class="work-popup">
                                 <img src="assets/img/works/workshop.jpg" alt="Workshop">
@@ -307,7 +308,7 @@
 
 
                     <!-- work item -->
-                    <div class="col-md-6 col-lg-4 mix web app graphic">
+                    <div class="col-md-6 col-lg-4 mix cpp python">
                         <div class="item">
                             <a href="https://github.com/derrix060/GoogleCodeJam" class="work-popup">
                                 <img src="assets/img/works/google.jpg" alt="Cloud">
@@ -322,7 +323,7 @@
 
 
                     <!-- Android app -->
-                    <div class="col-md-6 col-lg-4 mix web app graphic">
+                    <div class="col-md-6 col-lg-4 mix java">
                         <div class="item">
                             <a href="https://github.com/CaueP/Hackaton_Fatec_Ipiranga_2016" class="work-popup">
                                 <img src="assets/img/works/android.jpg" alt="Android icon">
