--- a/index.html
+++ b/index.html
@@ -121,13 +121,12 @@
 
 
     <!-- About area starts -->
-    <section id="about" class="about-area section">
+    <section id="about" class="about-area img-bg section">
         <div class="container">
-
             <div class="row">
                 <div class="col-md-24 text-center section-title">
                         <h2>ABOUT ME</h2>
-                        <blockquote class="blockquote-reverse">
+                        <blockquote class="blockquote-reverse col-md-12">
                             <p>"If you can't do the little things right, you will never do the big things right."</p>
                             <footer>William H. McRaven</footer>
                         </blockquote>   
@@ -141,7 +140,7 @@
                  <!-- Image -->
                 <div class="col-md-6">
                     <div class="me-image">
-                        <img src="assets/img/myself.jpg" alt="me surfing image">
+                        <img src="assets/img/myself.jpg" alt="myself">
                     </div>
                 </div>
 
@@ -222,7 +221,7 @@
     <!-- About area ends -->
 
     <!-- Work area starts -->
-    <section id="work" class="work-area img-bg section">
+    <section id="work" class="work-area section">
         <div class="container">
 
             <div class="row">
