align to center about text

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="col-md-6 text-center">
                     <h1>Who is Mario?</h1>
                 </div>
-                <div class="col-md-6 about-text">
+                <div class="col-md-6 about-text text-center">
                     <p>
                         My name is Mário Aprá and I'm from Sao Paulo, Brazil. 
                         I'm currently studying System analysis and development at Sao Paulo Technology College.
@@ -171,7 +171,7 @@
                 <div class="col-md-6 text-center">
                     <h1>Education</h1>
                 </div>
-                <div class="col-md-6 about-text">
+                <div class="col-md-6 about-text text-center">
                     <p>
                         I always was stood out: with high grades, good performance in scientific competitions, fast and deep learning, self motivated and intelligence.
                         In scientific competitions, I went to finals almost every time, I get merit honor at physics olympiad in 2009, even without physics class in my school.
@@ -199,7 +199,7 @@
                 <div class="col-md-6 text-center">
                     <h1>Work Experience</h1>
                 </div>
-                <div class="col-md-6 about-text">
+                <div class="col-md-6 about-text text-center">
                     <p>
                         I start work in IT in 2014 with database and in 2015 moved to Una Capital company.
                         There I was in charge of all IT area, because I was alone.
