works click now open in other sheet

--- a/index.html
+++ b/index.html
@@ -251,35 +251,35 @@
                     <!-- work item -->
                     <div class="col-md-6 col-lg-4 mix java">
                         <div class="item">
-                            <a href="https://github.com/derrix060/PredictionStocks" class="work-popup">
+                            <a href="https://github.com/derrix060/PredictionStocks" target="_blank">
                                 <img src="assets/img/works/artificial-intelligence.jpg" alt="Artificial Brain">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
                             <h3>NN to predict stock prices</h3>
-                            <p class="text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="text-center">This project was created to make the creation of neural networks focused on prediction in the finance market easier. It was used as a course conclusion paper.</p>
                         </div>
                     </div>
 
                     <!-- work item -->
                     <div class="col-md-6 col-lg-4 mix python">
                         <div class="item">
-                            <a href="https://github.com/derrix060/onedriveClient" class="work-popup">
+                            <a href="https://github.com/derrix060/onedriveClient" target="_blank">
                                 <img src="assets/img/works/cloud.jpg" alt="Cloud">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
                             <h3>OneDrive client for linux</h3>
-                            <p class="text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="text-center">This is a client program for Microsoft OneDrive for Linux. It enables you to sync local directories with remote OneDrive repositories of one or more OneDrive Personal account or for Business</p>
                         </div>
                     </div>
 
                     <!-- work item -->
                     <div class="col-md-6 col-lg-4 mix cpp java python">
                         <div class="item">
-                            <a href="https://github.com/derrix060/CodeStudy" class="work-popup">
+                            <a href="https://github.com/derrix060/CodeStudy" target="_blank">
                                 <img src="assets/img/works/code-study.jpg" alt="C++ code">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
@@ -293,7 +293,7 @@
                     <!-- work item -->
                     <div class="col-md-6 col-lg-4 mix cpp">
                         <div class="item">
-                            <a href="https://github.com/derrix060/ChamadaEventosFatec" class="work-popup">
+                            <a href="https://github.com/derrix060/ChamadaEventosFatec" target="_blank">
                                 <img src="assets/img/works/workshop.jpg" alt="Workshop">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
@@ -308,7 +308,7 @@
                     <!-- work item -->
                     <div class="col-md-6 col-lg-4 mix cpp python">
                         <div class="item">
-                            <a href="https://github.com/derrix060/GoogleCodeJam" class="work-popup">
+                            <a href="https://github.com/derrix060/GoogleCodeJam" target="_blank">
                                 <img src="assets/img/works/google.jpg" alt="Cloud">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
@@ -323,7 +323,7 @@
                     <!-- Android app -->
                     <div class="col-md-6 col-lg-4 mix java">
                         <div class="item">
-                            <a href="https://github.com/CaueP/Hackaton_Fatec_Ipiranga_2016" class="work-popup">
+                            <a href="https://github.com/CaueP/Hackaton_Fatec_Ipiranga_2016" target="_blank">
                                 <img src="assets/img/works/android.jpg" alt="Android icon">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
