fixed contact layout

--- a/index.html
+++ b/index.html
@@ -389,18 +389,23 @@
 
             <div class="row contact-row">
                 <div class="col-md-6">
-
+                    
+                    <!-- Contact form starts -->
                     <div class="contact-form">
-                        <!-- Contact form starts -->
                         <form action="https://formspree.io/mariotapra@gmail.com" method="POST">
-                            <input type="email" name="_replyto" class="form-control" id="email" placeholder="EMAIL" required="required">
+                            <div class="form-group in_email">
+                                <input type="email" name="_replyto" class="form-control" id="email" placeholder="EMAIL" required="required">
+                            </div>
                             <input type="hidden" name="_subject" value="Contact Form - personal webpage" />
                             <input type="text" name="_gotcha" style="display:none" />
-                            <textarea rows="5" name="message" class="form-control" id="message" placeholder="MESSAGE" required="required"></textarea>
+                            <div class="form-group in_message"> 
+                                <textarea rows="5" name="message" class="form-control" id="message in_message" placeholder="MESSAGE" required="required"></textarea>
+                            </div>
                             <input type="submit" value="Send Now" name="submit" id="submitButton" class="btn dark" title="Submit Your Message!">
                         </form>
                     </div>
                     <!-- Contact form ends-->
+
                 </div>
 
                 <div class="col-md-6">
