--- a/index.html
+++ b/index.html
@@ -366,6 +366,15 @@
                         <p class="desg">Founder of Coderspoint</p>
                     </div>
 
+                    <!-- Testimonial item -->
+                    <div class="single-testimonial text-center">
+                        <p class="text-left">Coderspoint has everything you need to get your new website up and running in no time! All of the templates and themes on Coderspoint w3c valid error free code and easy to use. We provide good support.</p>
+                        <img src="assets/img/testimonial/1.jpg" alt="">
+                        <div class="clearfix"></div>
+                        <h3>John doe</h3>
+                        <p class="desg">Founder of Coderspoint</p>
+                    </div>
+
                 </div>
             </div>
 
