--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
 <head>
 
-    <!-- 
-        If you are seeing this, you can check my backend CV at: ""
-    -->
     <!-- meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -219,6 +216,7 @@
     </section>
     <!-- About area ends -->
 
+
     <!-- Work area starts -->
     <section id="work" class="work-area section">
         <div class="container">
@@ -227,7 +225,7 @@
                 <div class="col-md-12 text-center">
                     <div class="section-title">
                         <h2>MY WORKS</h2>
-                        <p>Here is a few projects that I'm proud</p>
+                        <p>Here are a few projects (open source only, it not include commercial solutions) that I'm proud.</p>
                     </div>
                 </div>
             </div>
@@ -286,7 +284,7 @@
                                 </div>
                             </a>
                             <h3>Study to code competitions</h3>
-                            <p class="text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="text-center">This is a repository with some of code challanges solved. There are a lot of data structures and algorithms for classical computer problems.</p>
                         </div>
                     </div>
 
@@ -300,7 +298,7 @@
                                 </div>
                             </a>
                             <h3>Workshop attendance list control</h3>
-                            <p class="text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="text-center">This project was create to help in workshop attendance control offered by FATEC. It helps the teachers to give presence, improve the certificate emission, and generate some reports to coordinators.</p>
                         </div>
                     </div>
 
@@ -315,7 +313,7 @@
                                 </div>
                             </a>
                             <h3>Solutions to google code jam</h3>
-                            <p class="text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="text-center">Here are some solutions to google code jam problems. It include oficial analysis, problems descriptions, solutions for the first places, and my personal solutions.</p>
                         </div>
                     </div>
 
@@ -329,8 +327,8 @@
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
-                            <h3>Android app to blind people</h3>
-                            <p class="text-center">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h3>Android app to deaf people</h3>
+                            <p class="text-center">This project was created in a 2016 Hackathon at Fatec. The goal is help deaf people in some events and meeting, transcribing what people speak, using google speak to text API </p>
                         </div>
                     </div>
 
@@ -340,6 +338,7 @@
     
     </section>
     <!-- Work area ends -->
+
 
     <!-- Testimonial area starts -->
     <section id="testimonial" class="testimonial-area img-bg section">
@@ -464,22 +463,20 @@
     <!-- Footer area ends -->
 
 
-    <!-- Latest jQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <!-- Bootstrap js-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!-- Owl Carousel js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
-
-    <!-- Mixitup js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
-
-    <!-- Magnific popup js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-
-    <!-- Main js-->
-    <script src="assets/js/main_script.js"></script>
+    <!-- Scripts start -->
+        <!-- Latest jQuery -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <!-- Bootstrap js-->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!-- Owl Carousel js -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+        <!-- Mixitup js -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
+        <!-- Magnific popup js -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+        <!-- Main js-->
+        <script src="assets/js/main_script.js"></script>
+    <!-- Scripts ends -->
 
 </body>
 
