--- a/mercado_pago/index.html
+++ b/mercado_pago/index.html
@@ -1,7 +1,15 @@
 <html>
-    <form action="https://pagseguro.uol.com.br/checkout/v2/donation.html" method="post">
-        <input type="hidden" name="currency" value="BRL">
-        <input type="hidden" name="receiverEmail" value="azobrasil@gmail.com">
-        <input type="image" src="https://p.simg.uol.com.br/out/pagseguro/i/botoes/doacoes/120x53-doar-preto.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!">
-    </form>
+    <body onload="sendDonate()">
+        <form action="https://pagseguro.uol.com.br/checkout/v2/donation.html" method="post" id="donateForm">
+            <input type="hidden" name="currency" value="BRL">
+            <input type="hidden" name="receiverEmail" value="azobrasil@gmail.com">
+            <input type="image" src="https://p.simg.uol.com.br/out/pagseguro/i/botoes/doacoes/120x53-doar-preto.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!">
+        </form>
+    </body>
+
+    <script>
+        function sendDonate() {
+            document.getElementById("donateForm").submit();
+        }
+    </script>
 </html>
