--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                         A year ago, I entered in Brazilian Army as a cadet and stayed for 2 years.
                         After this, I taked time off and moved back to SP and started study System analysis.
                         In the first semester there, I joined in a code jam team and we was the seccond best group at my College and top 20 from all of Technology Colleges.
-                        Then, in the seccond year, my group was the 6th from all and in 2017, we was 2nd place.
                         In 2016, my team could win the first Hackathon in SP Technology College with an amazing project: real-time subtitle to help deaf people and e-book creator to blind people.
+                        In 2017, we get 2nd place in first step from code jam, and in 3th in hackathon, with another project to blind people.
                     </p>
                 </div>
             </div>
