translate to germany

--- a/donation/de/index.html
+++ b/donation/de/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Donation - ONG Azo</title>
+  <title>Spende - ONG Azo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
@@ -87,17 +87,17 @@
           </div>
         </div>
         <div class="col-md-6 col-sm-6 col-lg-6 col-xs-12">
-          <h1>IS BESTUURDER VAN DROMEN</h1>
+          <h1>IST EIN DIREKTOR DER TRAUME</h1>
           <p></p>
           <div class="range-container">
-            <h4>Hulp bij: <span class="value">R$0</span></h4>
+            <h4>Hilfe bei: <span class="value">R$0</span></h4>
             <input type="range" min="0" max="100" step="10" value="0"/>
           </div>
           <form action="https://pagseguro.uol.com.br/checkout/v2/donation.html" method="post">
             <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
             <input type="hidden" name="currency" value="BRL" />
             <input type="hidden" name="receiverEmail" value="azobrasil@gmail.com" />
-            <input type="image" src="https://p.simg.uol.com.br/out/pagseguro/i/botoes/doacoes/120x53-doar-preto.gif" name="submit" alt="Betaal met PagSeguro - het is snel, gratis en veilig!" />
+            <input type="image" src="https://p.simg.uol.com.br/out/pagseguro/i/botoes/doacoes/120x53-doar-preto.gif" name="submit" alt="Bezahlen Sie mit PagSeguro - schnell, kostenlos und sicher!" />
           </form>
         </div>
       </div>
