--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                 </div>
                             </a>
                             <h3>NN to predict stock prices</h3>
-                            <p class="text-center">This project was created to make the creation of neural networks focused on prediction in the finance market easier. It was used as a course conclusion paper.</p>
+                            <p class="text-center">Project created to make the creation of neural networks focused on prediction in the finance market easier. It was used as a course conclusion paper.</p>
                         </div>
                     </div>
 
@@ -270,7 +270,7 @@
                                 </div>
                             </a>
                             <h3>OneDrive client for linux</h3>
-                            <p class="text-center">This is a client program for Microsoft OneDrive for Linux. It enables you to sync local directories with remote OneDrive repositories of one or more OneDrive Personal account or for Business</p>
+                            <p class="text-center">Client program for Microsoft OneDrive for Linux. It enables you to sync local directories with remote OneDrive repositories of one or more OneDrive Personal account or for Business</p>
                         </div>
                     </div>
 
@@ -284,7 +284,7 @@
                                 </div>
                             </a>
                             <h3>Study to code competitions</h3>
-                            <p class="text-center">This is a repository with some of code challanges solved. There are a lot of data structures and algorithms for classical computer problems.</p>
+                            <p class="text-center">Repository with some of code challanges solved. There are a lot of data structures and algorithms for classical computer problems.</p>
                         </div>
                     </div>
 
@@ -298,7 +298,7 @@
                                 </div>
                             </a>
                             <h3>Workshop attendance list control</h3>
-                            <p class="text-center">This project was create to help in workshop attendance control offered by FATEC. It helps the teachers to give presence, improve the certificate emission, and generate some reports to coordinators.</p>
+                            <p class="text-center">Project created to help in workshop attendance control offered by FATEC. It helps the teachers to give presence, improve the certificate emission, and generate some reports to coordinators.</p>
                         </div>
                     </div>
 
@@ -328,7 +328,7 @@
                                 </div>
                             </a>
                             <h3>Android app to deaf people</h3>
-                            <p class="text-center">This project was created in a 2016 Hackathon at Fatec. The goal is help deaf people in some events and meeting, transcribing what people speak, using google speak to text API </p>
+                            <p class="text-center">Project created in a 2016 Hackathon at Fatec. The goal is help deaf people in some events and meeting, transcribing what people speak, using google speak to text API </p>
                         </div>
                     </div>
 
