add herdeiros project

--- a/index.html
+++ b/index.html
@@ -332,6 +332,21 @@
                         </div>
                     </div>
 
+
+                    <!-- Herdeiros -->
+                    <div class="col-md-6 col-lg-4 mix java python">
+                        <div class="item">
+                            <a href="https://github.com/derrix060/OngHerdeiros" target="_blank">
+                                <div class="overlay">
+                                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                                </div>
+                            </a>
+                            <h3>Android app to help a NGO</h3>
+                            <p class="text-center">Project created in a 2017 programming class and was elected as the better app. The goal is help a NGO to get more donations. </p>
+                        </div>
+                    </div>
+
+
                     
                 </div>
             </div>
