add herdeiros pic

--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
                     <div class="col-md-6 col-lg-4 mix java python">
                         <div class="item">
                             <a href="https://github.com/derrix060/OngHerdeiros" target="_blank">
+                                <img src="assets/img/works/herdeiros_hands.jpg" alt="Stack hands">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
