--- a/index.html
+++ b/index.html
@@ -348,6 +348,20 @@
                     </div>
 
 
+                    <!-- News API -->
+                    <div class="col-md-6 col-lg-4 mix python">
+                        <div class="item">
+                            <a href="https://github.com/derrix060/NewsBackend" target="_blank">
+                                <img src="assets/img/works/herdeiros_hands.jpg" alt="Stack hands">
+                                <div class="overlay">
+                                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                                </div>
+                            </a>
+                            <h3>News API: Concentrate news in one endpoing</h3>
+                            <p class="text-center">This is a service to get top news in different languages and categories. </p>
+                        </div>
+                    </div>
+
                     
                 </div>
             </div>
