--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                     <div class="col-md-6 col-lg-4 mix python">
                         <div class="item">
                             <a href="https://github.com/derrix060/NewsBackend" target="_blank">
-                                <img src="assets/img/works/herdeiros_hands.jpg" alt="Stack hands">
+                                <img src="assets/img/works/news.jpg" alt="News">
                                 <div class="overlay">
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
