add digital sense news

--- a/index.html
+++ b/index.html
@@ -362,6 +362,21 @@
                         </div>
                     </div>
 
+
+                    <!-- News App -->
+                    <div class="col-md-6 col-lg-4 mix java">
+                        <div class="item">
+                            <a href="https://github.com/CaueP/DigitalSensesNews" target="_blank">
+                                <img src="assets/img/works/braille-smartwatch.jpg" alt="News">
+                                <div class="overlay">
+                                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                                </div>
+                            </a>
+                            <h3>Android app to help blind people hear the news</h3>
+                            <p class="text-center">Android app developed on the 1st Android Hackathon at Fatec Carapicuiba (3th place). It's meant to provide a news feed adapted for people with visual disabilities. </p>
+                        </div>
+                    </div>
+
                     
                 </div>
             </div>
