change work item

--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                        </div>
+                        <div class="item">
                             <h3>NN to predict stock prices</h3>
                             <p class="text-center">Project created to make the creation of neural networks focused on prediction in the finance market easier. It was used as a course conclusion paper.</p>
                         </div>
@@ -269,6 +271,8 @@
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                        </div>
+                        <div class="item">
                             <h3>OneDrive client for linux</h3>
                             <p class="text-center">Client program for Microsoft OneDrive for Linux. It enables you to sync local directories with remote OneDrive repositories of one or more OneDrive Personal account or for Business</p>
                         </div>
@@ -283,6 +287,8 @@
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                        </div>
+                        <div class="item">
                             <h3>Study to code competitions</h3>
                             <p class="text-center">Repository with some of code challanges solved. There are a lot of data structures and algorithms for classical computer problems.</p>
                         </div>
@@ -297,6 +303,8 @@
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                        </div>
+                        <div class="item">
                             <h3>Workshop attendance list control</h3>
                             <p class="text-center">Project created to help in workshop attendance control offered by FATEC. It helps the teachers to give presence, improve the certificate emission, and generate some reports to coordinators.</p>
                         </div>
@@ -312,6 +320,8 @@
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                        </div>
+                        <div class="item">
                             <h3>Solutions to google code jam</h3>
                             <p class="text-center">Here are some solutions to google code jam problems. It include oficial analysis, problems descriptions, solutions for the first places, and my personal solutions.</p>
                         </div>
@@ -327,6 +337,8 @@
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                        </div>
+                        <div class="item">
                             <h3>Android app to deaf people</h3>
                             <p class="text-center">Project created in a 2016 Hackathon at Fatec. The goal is help deaf people in some events and meeting, transcribing what people speak, using google speak to text API </p>
                         </div>
@@ -342,6 +354,8 @@
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                        </div>
+                        <div class="item">
                             <h3>Android app to help a NGO</h3>
                             <p class="text-center">Project created in a 2017 programming class and was elected as the better app. The goal is help a NGO to get more donations. </p>
                         </div>
@@ -357,6 +371,8 @@
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                        </div>
+                        <div class="item">
                             <h3>News API: Concentrate news in one endpoing</h3>
                             <p class="text-center">This is a service to get top news in different languages and categories. </p>
                         </div>
@@ -372,6 +388,8 @@
                                     <i class="fa fa-arrows-alt" aria-hidden="true"></i>
                                 </div>
                             </a>
+                        </div>
+                        <div class="item">
                             <h3>Android app to help blind people hear the news</h3>
                             <p class="text-center">Android app developed on the 1st Android Hackathon at Fatec Carapicuiba (3th place). It's meant to provide a news feed adapted for people with visual disabilities. </p>
                         </div>
